--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 <body>
 
   <header>
-    <div class="company-name">IntuSens LiquiQ Pvt. Ltd.</div>
-    <div class="tagline">Innovation for a Liquid-Wise World</div>
+  <img src="IS-LQ4.png" alt="IntuSens LiquiQ Logo" style="max-height: 100px;" />
+  <div class="company-name">IntuSens LiquiQ Pvt. Ltd.</div>
+  <div class="tagline">Innovation for a Liquid-Wise World</div>
   </header>
 
   <nav>
